--- a/packages/components/src/components/form/bal-field/bal-field.sass
+++ b/packages/components/src/components/form/bal-field/bal-field.sass
@@ -14,7 +14,7 @@
   width: 1rem
   +element(hint)
     position: absolute
-    top: 6px
+    top: 2px
     left: 0
 
 +block(field-message)
